--- a/index.html
+++ b/index.html
@@ -4,39 +4,49 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SpaceHub</title>
-
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/9.1.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.1.2/firebase-storage.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.1.2/firebase-auth.js"></script>
-
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-  <header>
-    <h1>SpaceHub</h1>
-  </header>
-
-  <div id="auth-container">
-    <h2>Sign In</h2>
-    <input type="email" id="email" placeholder="Email">
-    <input type="password" id="password" placeholder="Password">
-    <button onclick="signInWithEmail()">Sign In</button>
-    <p id="auth-message"></p>
+  <div id="loginPage">
+    <h1>Welcome to SpaceHub</h1>
+    <div id="loginForm">
+      <input type="text" id="loginUsername" placeholder="Username">
+      <input type="password" id="loginPassword" placeholder="Password">
+      <button onclick="login()">Login</button>
+      <button onclick="showSignUp()">Sign Up</button>
+    </div>
   </div>
 
-  <div id="file-upload-container" style="display:none;">
-    <h2>Upload File</h2>
-    <input type="file" id="fileInput">
-    <button onclick="uploadFile()">Upload File</button>
-    <p id="file-message"></p>
+  <div id="signUpPage" style="display: none;">
+    <h1>Sign Up</h1>
+    <div id="signUpForm">
+      <input type="text" id="signupUsername" placeholder="Username">
+      <input type="password" id="signupPassword" placeholder="Password">
+      <button onclick="signUp()">Create Account</button>
+      <button onclick="showLogin()">Back to Login</button>
+    </div>
   </div>
 
-  <footer>
-    <p>&copy; 2025 SpaceHub</p>
-  </footer>
+  <div id="homePage" style="display: none;">
+    <h1>Welcome, <span id="userDisplayName"></span></h1>
+    <button onclick="logout()">Logout</button>
+    <div>
+      <h2>Friends List</h2>
+      <ul id="friendsList"></ul>
+    </div>
+    <div>
+      <h2>Add a Friend</h2>
+      <input type="text" id="addFriendUsername" placeholder="Friend's Username">
+      <button onclick="addFriend()">Send Friend Request</button>
+    </div>
+    <div>
+      <h2>Messages</h2>
+      <input type="text" id="messageInput" placeholder="Type a message...">
+      <button onclick="sendMessage()">Send</button>
+      <ul id="messageList"></ul>
+    </div>
+  </div>
 
-  <script src="app.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
